tests/lean/error_full_names.lean.expected.out
error_full_names.lean:4:8: error: type mismatch at application
  0 + nat.zero
term
  nat.zero
has type
  nat
but is expected to have type
  ℕ
error_full_names.lean:8:6: error: type mismatch at application
  nat.succ nat.zero
term
  nat.zero
has type
  foo.nat
but is expected to have type
  nat
